--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,27 +1,39 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #424242;
-  max-width: 960px;
-  padding: 16px;
+html {
+  box-sizing: border-box;
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #009688;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
-.example .background {
-  height: 240px;
-  // Путь к изображениям из SASS-файла всегда такой, как из папки css
-  background-image: url('../images/demo.jpg');
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url('../images/paper.jpg');
   background-size: cover;
-  background-position: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  letter-spacing: 0.04;
+  color: rgb(75, 5, 5);
+}
+form {
+  margin-top: 25px;
+  margin-left: 125px;
+}
+
+input {
+  margin: 0;
+  padding: 5px;
+}
+
+.container {
+  margin-left: 25%;
+}
+
+.js-img {
+  margin-top: 30px;
+  width: 230px;
+  height: auto;
 }
